--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -591,14 +591,16 @@
   width: 100%;
   height: auto;
   // aspect-ratio: 1/1;
-    @include media-breakpoint-up(lg) {
-      aspect-ratio: 1/1;
-    }
+  // transition: height 999999s;
+  // transition: width 999999s;
+  @include media-breakpoint-up(lg) {
+    aspect-ratio: 1/1;
+  }
   min-height: rem(400);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   max-width: 100vw;
   z-index: 4;
 
